Import of DANNYT/WWW-twitter-1.0 from CPAN.
gitpan-cpan-distribution: WWW-Twitter
gitpan-cpan-version:      1.0
gitpan-cpan-path:         DANNYT/WWW-twitter-1.0.tar.gz
gitpan-cpan-author:       DANNYT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
-Revision history for WWW-twitter
+Changes
+=======
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+- 1.0 Sat 15 Jun 2014
+  - Released unto an unsuspecting world.
 
