--- a/Changes
+++ b/Changes
@@ -1,6 +1,5 @@
-Changes
-=======
+Revision history for WWW-Twitter
 
-- 1.0 Sat 15 Jun 2014
-  - Released unto an unsuspecting world.
+0.01    Date/time
+        First version, released on an unsuspecting world.
 
