--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-WWW-twitter
+WWW-Twitter
 
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
@@ -30,21 +30,21 @@ SUPPORT AND DOCUMENTATION
 After installing, you can find documentation for this module with the
 perldoc command.
 
-    perldoc WWW::twitter
+    perldoc WWW::Twitter
 
 You can also look for information at:
 
     RT, CPAN's request tracker (report bugs here)
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=WWW-twitter
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=WWW-Twitter
 
     AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/WWW-twitter
+        http://annocpan.org/dist/WWW-Twitter
 
     CPAN Ratings
-        http://cpanratings.perl.org/d/WWW-twitter
+        http://cpanratings.perl.org/d/WWW-Twitter
 
     Search CPAN
-        http://search.cpan.org/dist/WWW-twitter/
+        http://search.cpan.org/dist/WWW-Twitter/
 
 
 LICENSE AND COPYRIGHT
